# OM1

./: .env.example  README.md  env.example  pyproject.toml
.github/ISSUE_TEMPLATE/: 🌟-bounty.md
config/: claude.json5  conversation.json5  fallback.json5  glm4.json5  groq.json5  head_control_example.json5  mistral.json5  modbus_demo.json5  modbus_plc.json5  ollama.json5  ollama_websearch.json5  set_goal_example.json5  telegram_monitor.json5  unitree_go2_plc.json5
docs/developing/: 10_cli.mdx
docs/full_autonomy_guidelines/: state_machine_diagram.mdx
mintlify/: docs.json
mintlify/developing/: 10_cli.mdx  1_get-started.mdx
mintlify/full_autonomy_guidelines/: state_machine_diagram.mdx
scripts/: generate_schema.py  modbus_plc_simulator.py  test_cli_comprehensive.py
src/: cli.py  run.py
src/actions/: __init__.py  orchestrator.py
src/actions/head_control/: interface.py
src/actions/modbus_write/: interface.py
src/actions/move_game_controller/: interface.py
src/actions/navigate_location/: interface.py
src/actions/remember_location/: interface.py
src/actions/send_email/: interface.py
src/actions/set_goal/: interface.py
src/actions/telegram_message/: interface.py
src/actions/web_search/: interface.py
src/backgrounds/: __init__.py
src/backgrounds/plugins/: odom.py  rf_mapper.py  unitree_g1_locations.py  unitree_go2_amcl.py  unitree_go2_locations.py
src/cli/: __init__.py  _bootstrap.py  main.py
src/cli/commands/: doctor.py  env.py  info.py  init.py  lint.py  list_cmd.py  modes.py  restart.py  run.py  setup.py  status.py  stop.py  test.py  validate.py
src/cli/utils/: __init__.py  config.py  output.py  process.py  system.py
src/fuser/: __init__.py
src/hooks/: nav2_hook.py  person_follow_hook.py  slam_hook.py
src/inputs/: __init__.py  orchestrator.py
src/llm/: __init__.py  function_schemas.py  output_model.py
src/providers/: asr_provider.py  asr_rtsp_provider.py  avatar_llm_state_provider.py  context_provider.py  d435_provider.py  elevenlabs_tts_provider.py  fabric_map_provider.py  face_presence_provider.py  gallery_identities_provider.py  goal_provider.py  gps_provider.py  health_monitor_provider.py  io_provider.py  llm_history_manager.py  modbus_provider.py  odom_provider.py  prometheus_monitor.py  riva_tts_provider.py  rplidar_driver.py  rplidar_provider.py  rtk_provider.py  simple_paths_provider.py  sleep_ticker_provider.py  teleops_conversation_provider.py  turtlebot4_camera_vlm_provider.py  ub_tts_provider.py  ubtech_asr_provider.py  ubtech_vlm_provider.py  unitree_go2_frontier_exploration.py  unitree_realsense_dev_vlm_provider.py  vlm_gemini_provider.py  vlm_openai_provider.py  vlm_openai_rtsp_provider.py  vlm_vila_provider.py  vlm_vila_rtsp_provider.py  vlm_vila_zenoh_provider.py  zenoh_listener_provider.py  zenoh_publisher_provider.py
src/runtime/: logging.py  robotics.py  version.py
src/simulators/: __init__.py  base.py  orchestrator.py
tests/: test_ollama_llm.py
tests/actions/: test_orchestrator.py
tests/cli/: conftest.py  test_check_api_key.py  test_check_class_in_dir.py  test_check_exists.py  test_doctor.py  test_env.py  test_info.py  test_init.py  test_lint.py  test_list.py  test_list_configs_command.py  test_main.py  test_modes.py  test_modes_command.py  test_resolve_config_path.py  test_restart.py  test_run.py  test_setup.py  test_status.py  test_stop.py  test_test.py  test_validate.py  test_validate_config_command.py
tests/hooks/: test_person_follow_hook.py
tests/inputs/: test_orchestrator.py
tests/integration/: test_health_monitor_integration.py  test_modbus_feedback_loop.py  test_modbus_integration.py
tests/llm/: test_fallback_llm.py  test_function_schemas.py
tests/providers/: test_asr_provider.py  test_asr_rtsp_provider.py  test_d435_provider.py  test_elevenlabs_tts_provider.py  test_goal_provider.py  test_health_monitor_provider.py  test_llm_history_manager.py  test_modbus_provider.py  test_prometheus_monitor.py  test_riva_tts_provider.py  test_rplidar_floating_point.py  test_rplidar_queue_handling.py  test_rtk_provider.py  test_ub_tts_provider.py  test_ubtech_asr_provider.py  test_ubtech_vlm_provider.py  test_unitree_realsense_dev_vlm_provider.py  test_vlm_gemini_provider.py  test_vlm_openai_provider.py  test_vlm_openai_rtsp_provider.py  test_vlm_vila_provider.py  test_vlm_vila_rtsp_provider.py  test_vlm_vila_zenoh_provider.py  test_zenoh_listener_provider.py
tests/runtime/: test_mode_manager_time_remaining.py
(+111 files in other folders)
